solicitud_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solicitud-service
spec:
  selector:
    app: solicitud-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
